--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.26.1",
     "framer-motion": "^6.2.8",
     "next": "12.1.0",
+    "next-auth": "^4.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "^7.2.6",
