adding spotify authorization

--- a/.env.template
+++ b/.env.template
@@ -1,2 +1,11 @@
+API_URL=
+
 GOOGLE_ID=
 GOOGLE_SECRET=
+
+SPOTIFY_BASE_URL
+SPOTIFY_API_URL=
+SPOTIFY_ID=
+SPOTIFY_SECRET=
+SPOTIFY_SCOPE=
+SPOTIFY_REDIRECT_URL=
