--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "cross-env NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -12,20 +12,28 @@
     "@emotion/styled": "^11.8.1",
     "@reduxjs/toolkit": "^1.8.0",
     "axios": "^0.26.1",
+    "cookie": "^0.4.2",
     "framer-motion": "^6.2.8",
+    "lodash-es": "^4.17.21",
     "next": "12.1.0",
     "next-auth": "^4.2.1",
+    "query-string": "^7.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "^7.2.6",
-    "sass": "^1.49.9"
+    "sass": "^1.49.9",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.17.0",
+    "@types/cookie": "^0.4.1",
+    "@types/lodash-es": "^4.17.6",
     "@types/node": "17.0.21",
     "@types/react": "17.0.40",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
     "@typescript-eslint/parser": "^5.15.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.11.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^16.1.2",
