--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "^7.2.6",
+    "redux-persist": "^6.0.0",
     "sass": "^1.49.9",
     "uuid": "^8.3.2"
   },
