--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lodash-es": "^4.17.21",
     "next": "12.1.0",
     "next-auth": "^4.2.1",
+    "next-redux-wrapper": "^7.0.5",
     "query-string": "^7.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
