--- a/.env.template
+++ b/.env.template
@@ -3,7 +3,8 @@ API_URL=
 GOOGLE_ID=
 GOOGLE_SECRET=
 
-SPOTIFY_BASE_URL
+SPOTIFY_ACCOUNTS_BASE_URL=
+SPOTIFY_ACCOUNTS_API_URL=
 SPOTIFY_API_URL=
 SPOTIFY_ID=
 SPOTIFY_SECRET=
