--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -55,6 +55,14 @@
         "@typescript-eslint/brace-style": [
           "error",
           "stroustrup"
+        ],
+        "@typescript-eslint/no-unused-vars": [
+          "warn",
+          {
+            "argsIgnorePattern": "^_",
+            "varsIgnorePattern": "^_",
+            "caughtErrorsIgnorePattern": "^_"
+          }
         ]
       }
     }
@@ -131,6 +139,8 @@
       "error",
       "consistent-as-needed"
     ],
-    "implicit-arrow-linebreak": "off"
+    "implicit-arrow-linebreak": "off",
+    "no-unused-vars": "off",
+    "no-confusing-arrow": "off"
   }
 }
